--- a/rdm-demo/gradle.properties
+++ b/rdm-demo/gradle.properties
@@ -16,3 +16,16 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+MAVEN_URL=http\://maven.oa.com/nexus/content/groups/androidbuild/
+MAVEN_URL_DEBUG=http\://maven.oa.com/nexus/content/repositories/thirdparty-snapshots
+MAVEN_URL_RELEASE=http\://maven.oa.com/nexus/content/repositories/thirdparty
+
+
+systemProp.http.nonProxyHosts=*.oa.com
+systemProp.http.proxyPort=8080
+systemProp.http.proxyHost=dev-proxy.oa.com
+systemProp.https.nonProxyHosts=*.oa.com|10.*
+systemProp.https.proxyPort=8080
+systemProp.https.proxyHost=dev-proxy.oa.com
