--- a/rdm-demo/build.gradle
+++ b/rdm-demo/build.gradle
@@ -5,7 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+
+        classpath 'com.android.tools.build:gradle:3.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -14,7 +15,21 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+
+        maven {
+            url project.MAVEN_URL
+        }
+        maven {
+            url project.MAVEN_URL_DEBUG
+        }
+        maven {
+            url project.MAVEN_URL_RELEASE
+        }
+
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/groups/public/'
+        }
+        //jcenter()
     }
 }
 
