--- a/rdm-demo/build.gradle
+++ b/rdm-demo/build.gradle
@@ -3,14 +3,21 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
 
         classpath 'com.android.tools.build:gradle:3.1.3'
 
+        classpath "com.jakewharton:butterknife-gradle-plugin:8.4.0"
+
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
+
+
 }
 
 allprojects {
@@ -29,9 +36,12 @@ allprojects {
         maven {
             url 'http://maven.aliyun.com/nexus/content/groups/public/'
         }
-        //jcenter()
+       // jcenter()
+        //google()
     }
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
