--- a/rdm-demo/common-ui/build.gradle
+++ b/rdm-demo/common-ui/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.library'
 
+
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 18
@@ -20,6 +21,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:27.1.0'
+    compile 'com.android.support:recyclerview-v7:27.1.0'
     compile project(':common-base')
+
+
 }
